tests/fixtures/invalid/str_bitor_list.py
# Cannot bitwise OR Str and List[int]
x: str = "hello" | [1, 2, 3]
